# ovirt-system-tests

./: .gitignore  .gitreview  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  FAQ.md  LICENSE  README.md  compat-3.6-suite-master  conf.py  conftest.py  lagofy.sh  md-report.ini  ost.sh  pylintrc  pytest.ini  requirements.txt  run-ost-container.sh  run_image_suite.sh  run_suite.sh  run_suite_vagrant.sh  setup_for_ost.sh  stdci.yaml  tox.ini
.github/: CODEOWNERS  README.md  README_AUTOMATION.md  example-trigger.yaml  jenkins  nginx  tr-master-suite-trigger.yaml
ansible-suite-master/: ansible.cfg  control.sh  engine.yml  reposync-config-host.repo  reposync-config.repo  vars
automation/: ansible_suite_master.packages  basic-vagrant_suite_master.packages  basic-vagrant_suite_master.repo  basic-vagrant_suite_master.sh  basic-vagrant_suite_master.yumrepos  basic_suite_3.5.packages  basic_suite_3.5.repos  basic_suite_3.5.sh  basic_suite_3.6.packages  basic_suite_3.6.repos  basic_suite_3.6.sh  basic_suite_4.0.repos  basic_suite_4.0.sh  basic_suite_4.1.mounts  basic_suite_4.1.repos.el7  basic_suite_4.1.yumrepos  basic_suite_4.2.repos.el7  basic_suite_4.2.yumrepos  basic_suite_4.3.engine.yumrepos  basic_suite_4.3.host.yumrepos  basic_suite_4.3.repos.el7  basic_suite_4.3.yumrepos  basic_suite_compat_master.repos  basic_suite_master.environment.yaml  basic_suite_master.mounts.el8  basic_suite_master.packages  basic_suite_master.packages.el8  basic_suite_master.packages.rhel8  basic_suite_master.repos  basic_suite_master.repos.el7  basic_suite_master.repos.el8  basic_suite_master.repos.rhel8  basic_suite_master.sh  basic_suite_master.yumrepos.engine  build-artifacts.sh  change_resolver.py  change_resolver_conf.py  check-docs.packages  check-docs.repos  check-docs.sh  (+125 more)
basic-suite-3.6/: LagoInitFile.in  aaa-ldap-answer-file.conf  control.sh  templates
basic-suite-4.1/: pkgs.txt  templates
basic-suite-4.2/: control.sh  pkgs.txt  test-scenarios  test_utils
basic-suite-4.3/: control.sh  pkgs.txt  reposync-config-sdk4.repo
basic-suite-compat-master/: LagoInitFile.in  control.sh  deploy-scripts  engine-answer-file.conf  test-scenarios
basic-suite-master/: LagoInitFile.in  control.sh  ost.json  pkgs.txt  reposync-config-engine.rhel8.repo  reposync-config-host.rhel8.repo  reposync-config-sdk4.repo  reposync-config-sdk4.rhel8.repo  reposync-config.repo  setup_storage.sh  templates
basic-suite-master-vagrant/: Vagrantfile  control_vagrant.sh  reposync-config.repo_repoclosure  vagrant_hosts.yml
basic-vagrant-suite-master/: Vagrantfile  aaa-ldap-answer-file.conf  control.sh  pkgs.txt  reposync-config.repo  vagrant_hosts.yml
basic_suite/: control.sh  init.json.in  template-repo.json
basic_suite_3.5/: control.sh  engine-answer-file.conf  init.json.in  reposync-config.repo
basic_suite_3.6/: control.sh  engine-answer-file.conf  init.json.in
basic_suite_4.0/: aaa-ldap-answer-file.conf
basic_suite_master/: control.sh  init.json.in
common/: he-engine-dc1-cl1.bck
compat-suite-master/: files  pkgs.txt  reposync-config-host.repo  reposync-config.repo  setup_storage.sh  test_utils  vars
docs/: conf.py  docs-requires.txt  index.markdown  index.md  mkdocs.yaml  mkdocs.yml
dr-suite-master/: control.sh
github/: README.md  example-trigger.yaml  ost.yaml
hc-basic-suite-4.1/: LagoInitFile.in  control.sh  gdeploy-setup.sh  hc-answers.conf.in  hc_setup_host.sh  reposync-config.repo  robo.conf.in
hc-basic-suite-4.2/: LagoInitFile.in  control.sh  generate-hc-answerfile.sh  hc-answers.conf.in  reposync-config.repo  robo.conf.in  setup_first_host.sh
hc-basic-suite-4.3/: LagoInitFile.in  control.sh  exec_playbook.sh  generate-hc-answerfile.sh  hc-answers.conf.in  hc_setup_host.sh  ohc_gluster_inventory.yml.in  ohc_he_gluster_vars.json.in  pkgs.txt  reposync-config.repo  robo.conf.in  setup_first_host.sh  test-scenarios  vars
hc-basic-suite-master/: LagoInitFile.in  control.sh  exec_playbook.sh  gdeploy-setup.sh  gdeploy.sh  generate-hc-answerfile.sh  gluster_inventory.yml.in  hc-answers.conf.in  hc_setup_host.sh  he_deploy.sh  ohc_gluster_inventory.yml.in  ohc_he_gluster_vars.json.in  pkgs.txt  reposync-config.repo  robo.conf.in  setup_first_host.sh
he-basic-ansible-suite-4.2/: LagoInitFile.in  answers.conf.in  control.sh  follow.changes.in.he-basic.control.sh  reposync-config.repo  reposync-he.repo  template-repo.json
he-basic-ansible-suite-master/: LagoInitFile.in  answers.conf.in  control.sh  reposync-config.repo  reposync-he.repo  setup_first_he_host.sh  template-repo.json
he-basic-ipv6-suite-master/: LagoInitFile.in  find_ipv6_subnet.py
he-basic-iscsi-suite-4.2/: README.md  answers.conf.in  control.sh
he-basic-iscsi-suite-4.3/: README.md  setup_first_he_host.sh  test-scenarios  test_utils  vars
he-basic-iscsi-suite-master/: README.md  answers.conf.in  setup_first_he_host.sh
he-basic-role-remote-suite-4.3/: control.sh  he_deployment.json.in  hosted_engine_deploy.yml.in  pkgs.txt  reposync-he.repo  run_ansible_controller.sh
he-basic-role-remote-suite-master/: control.sh  he_deployment.json.in  hosted_engine_deploy.yml.in  pkgs.txt  run_ansible_controller.sh
he-basic-suite-3.6/: answers-additional.conf.in  answers.conf.in  control.sh  reposync-config.repo  setup_additional_he_host.sh  setup_first_he_host.sh
he-basic-suite-4.0/: LagoInitFile.in  answers-additional.conf.in  answers.conf.in  control.sh  setup_additional_he_host.sh  setup_first_he_host.sh
he-basic-suite-4.1/: answers.conf.in  control.sh  reposync-config.repo  reposync-he.repo  setup_additional_he_host.sh  setup_first_he_host.sh
he-basic-suite-4.2/: answers.conf.in  control.sh  reposync-he.repo  setup_first_he_host.sh
he-basic-suite-4.3/: control.sh  reposync-config-sdk4.repo  reposync-he.repo  test_utils
he-basic-suite-master/: answers.conf.in  control.sh  ost.json  (+3 more)
ost-images/: Makefile.am  build.sh  configure.ac  el8-provision-engine.sh.in  el8-provision-host.sh.in  ost-images.spec  ost-images.spec.in  rebase_images.sh  template.ks.in
ost-images/build-aux/: pkg-version
(+1063 files in other folders)
